// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 15,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 38,
  "paths": 0,
  "sha": "27069b4bf5cc799f",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 30,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 131,
  "paths": 0,
  "sha": "2e57610449149ad2",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 59,
  "paths": 0,
  "sha": "40290364d8ed6bd1",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 36,
  "circles": 0,
  "inputs": 21,
  "lengthBucket": 97,
  "paths": 0,
  "sha": "7384faa54a18888f",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 47,
  "circles": 3,
  "inputs": 8,
  "lengthBucket": 126,
  "paths": 0,
  "sha": "86276975eb735dd9",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 47,
  "paths": 0,
  "sha": "ed0436e5e810ce01",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 42,
  "paths": 0,
  "sha": "d015be39e256cc73",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 26,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 74,
  "paths": 0,
  "sha": "29840a3b1901df61",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 94,
  "paths": 0,
  "sha": "bc889d94743fc8ec",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 53,
  "circles": 3,
  "inputs": 1,
  "lengthBucket": 127,
  "paths": 1,
  "sha": "ce75108324d7ffed",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 39,
  "circles": 5,
  "inputs": 4,
  "lengthBucket": 148,
  "paths": 1,
  "sha": "c3d33900cf3fde38",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 22,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 81,
  "paths": 0,
  "sha": "63a69813ada02cc7",
  "svgs": 0,
}
`;
